<resources>
    <string name="app_name">Hours</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login to Hours</string>
    <string name="email_hint">email</string>
    <string name="password_hint">password</string>
    <string name="login_button_text">login</string>
    <string name="invalid_email">invalid email address</string>
    <string name="invalid_password">invalid password. Must  have at least 6 characters</string>
    <string name="user_not_exists">unknown user</string>
    <string name="login_not_succesful">login not successful</string>
    <string name="title_activity_main">Hours</string>

    <string name="title_section1">Days</string>
    <string name="title_section2">Weeks</string>
    <string name="title_section3">Months</string>
    <string name="title_section4">Years</string>
    <string name="title_section5">Logout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_edit_session">Summary Details</string>
    <string name="date">date</string>
    <string name="duration_cycle">duration cycling</string>
    <string name="duration_run">duration running</string>
    <string name="duration_swim">duration swimming</string>
    <string name="duration_athletic">duration athletic</string>
    <string name="Minutes">Minutes</string>
    <string name="action_done">d</string>
    <string name="action_cancel">c</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="summary_date_not_set">Date for daily sessions summary not set.</string>
    <string name="period">Period</string>
    <string name="swim">S</string>
    <string name="cycle">C</string>
    <string name="run">R</string>
    <string name="swimming">swimming</string>
    <string name="athletics">athletic</string>
    <string name="running">running</string>
    <string name="cycling">cycling</string>
    <string name="timeShare">Time Share</string>
    <string name="athletic_short">A</string>
    <string name="date_hint">date</string>
    <string name="time_hint">00:00</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_stacked_barchart">Use stacked bar charts</string>
    <string name="pref_stacked_barchart_sum">Use stacked bar charts on the summaries list views to display duration for each sports type.</string>
    <string name="title_activity_ddd">Settings</string>
    <string name="pref_barchart_stacked">Use stacked bar charts</string>
    <string name="pref_barchart_stacked_sum">Use stacked bar charts on the list views to display durations for each sports type.</string>
    <string name="pref_barchart_key">pref_barchart_key</string>

    <string name="pref_max_value_days_key">PrefMaxValueDaysKey</string>
    <string name="pref_max_value_weeks_key">PrefMaxValueWeeksKey</string>
    <string name="pref_max_value_months_key">PrefMaxValueMonthsKey</string>
    <string name="pref_max_value_years_key">PrefMaxValueYearsKey</string>
    <string name="pref_max_value_days">Max. value for Days View (default 480 minutes)</string>
    <string name="pref_max_value_weeks">Max. value for Weeks View (default 1800 minutes)</string>
    <string name="pref_max_value_months">Max. value for Months View (default 4800 minutes)</string>
    <string name="pref_max_value_years">Max. value for Years View (default 60000 minutes)</string>
    <string name="register_button_text">register</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="daily_summary">daily summary</string>
    <string name="monthly_summary">monthly summary</string>
    <string name="weekly_summary">weekly summary</string>
    <string name="yearly_summary">yearly summary</string>
    <string name="yesterday">Yesterday</string>
    <string name="sports">sports</string>
    <string name="percent">percents</string>
    <string name="minutes">minutes</string>

</resources>
