<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                tools:context="de.dastuhl.hours.DetailSessionsSummaryActivityFragment"
                android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/date_button"
            android:text="@string/period"/>
        <EditText
            android:id="@+id/session_date"
            android:hint="@string/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/swim_button"
            android:text="@string/swim"/>
        <EditText
            android:id="@+id/session_duration_swim"
            android:hint="@string/duration_swim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cycle_button"
            android:text="@string/cycle"/>
        <EditText
            android:id="@+id/session_duration_cycle"
            android:hint="@string/duration_cycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/run_button"
            android:text="@string/run"/>
        <EditText
            android:id="@+id/session_duration_run"
            android:hint="@string/duration_run"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/athletic_button"
            android:text="@string/run"/>
        <EditText
            android:id="@+id/session_duration_athletic"
            android:hint="@string/duration_athletic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false" />
    </LinearLayout>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/details_pie_chart_view"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_width="match_parent"/>

</LinearLayout>
